crates/lang/macro/tests/ui/trait_def/fail/invalid_payable_1.stderr
error: unknown ink! attribute argument (name = value)
 --> $DIR/invalid_payable_1.rs:5:20
  |
5 |     #[ink(message, payable = false)]
  |                    ^^^^^^^^^^^^^^^
